--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,13 @@ dependencies = [
     "wordcloud (>=1.9.4,<2.0.0)"
 ]
 
+[
+tool.poetry.group.test
+]
+optional = true
+dependencies = 
+    pytest = "^7.0.0"
+
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
