--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
 [tool.poetry.group.test]
 optional = true
 dependencies = [
-    pytest = "^7.0.0"
+    pytest = ">=7.0.0"
 ]
 
 [build-system]
