--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,24 +18,14 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-    
-    - name: Configure Poetry
-      run: |
-        poetry config virtualenvs.create false
-    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        poetry install
-    
-    - name: Install test dependencies
+    - name: Build Project
       run: |
-        poetry install --with test
-    
-    - name: Run tests
+        pip install .[test]
+    - name: Test with pytest
       run: |
-        python -m pytest tests/ -v
+        pytest
+
    
