--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,24 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
 
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+    
+    - name: Configure Poetry
+      run: |
+        poetry config virtualenvs.create false
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-    - name: Build Project
+        poetry install
+    
+    - name: Install test dependencies
       run: |
-        pip install .[test]
-    - name: Test with pytest
+        poetry install --with test
+    
+    - name: Run tests
       run: |
-        pytest
-
+        python -m pytest tests/ -v
    
