--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ['pytest>=7.0.0, <9.0.0',
+test = ['pytest>=7.0.0, <9.0.0']
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
