--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     
     - name: Build AI-Open-Science
       run: |
-        pip install .[test]
+        pip install .[tests]
     - name: Test with pytest
       run: |
         pytest
