--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,6 @@ jobs:
         pip install .[tests]
     - name: Test with pytest
       run: |
-        pytest
+        python -m pytest tests/ -v
+
    
