--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,6 @@ jobs:
         pip install .[tests]
     - name: Test with pytest
       run: |
-        python -m pytest tests/ -v
+        pytest
 
    
