--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,12 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
         poetry install
     
+
     - name: Build AI-Open-Science
       run: |
         pip install .[tests]
-    - name: Test with pytest
+    
+    - name: Test with unittest
       run: |
-        pytest
-
-   
+        python -m unittest discover -s tests -p "test_*.py"
+  
