--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,5 @@ jobs:
     
     - name: Test with unittest
       run: |
-        python -m unittest discover -s tests -p "test_*.py"
+        python -m unittest discover -s tests -p "tests_*.py"
   
